--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
-		<title>Vue Boilerplate</title>
+		<title>Vue and friends Boilerplate</title>
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<div id="app"></div>
